--- a/Water Drink Water/src/application/application.csproj
+++ b/Water Drink Water/src/application/application.csproj
@@ -9,4 +9,12 @@
         <Product>Water Drink Water</Product>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\data\data.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Ardalis.Result" Version="7.2.0" />
+    </ItemGroup>
+
 </Project>
