--- a/Water Drink Water/src/api/api.csproj
+++ b/Water Drink Water/src/api/api.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\application\application.csproj" />
+    </ItemGroup>
+
 </Project>
