--- a/Water Drink Water/src/api/appsettings.json
+++ b/Water Drink Water/src/api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "default": "Data Source=WaterDrinkWater.db"
+  },
   "AllowedHosts": "*"
 }
