--- a/Water Drink Water/src/data/data.csproj
+++ b/Water Drink Water/src/data/data.csproj
@@ -9,4 +9,9 @@
         <Product>Water Drink Water</Product>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.1" />
+    </ItemGroup>
+
 </Project>
