--- a/Water Drink Water/src/api/api.csproj
+++ b/Water Drink Water/src/api/api.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <PackageReference Include="FastEndpoints" Version="5.21.2" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="5.21.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
