Implement Get PreferencesViewModel.cs
Addresses Issue #11, but necessary to implement goals. replaces previous PR

--- a/Water Drink Water/src/api/api.csproj
+++ b/Water Drink Water/src/api/api.csproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\application\application.csproj" />
+      <ProjectReference Include="..\viewmodels\viewmodels.csproj" />
     </ItemGroup>
 
 </Project>
