--- a/Water Drink Water/src/clients/blazor.wa.tbd/blazor.wa.tbd.csproj
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/blazor.wa.tbd.csproj
@@ -17,4 +17,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\viewmodels\viewmodels.csproj" />
+    </ItemGroup>
+
 </Project>
