--- a/Water Drink Water/src/clients/blazor.wa.tbd/Properties/launchSettings.json
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:7077;http://localhost:5113",
       "environmentVariables": {
