--- a/Water Drink Water/src/clients/blazor.wa.tbd/blazor.wa.tbd.csproj
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/blazor.wa.tbd.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all"/>
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     </ItemGroup>
@@ -19,6 +20,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\viewmodels\viewmodels.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Components\" />
     </ItemGroup>
 
 </Project>
