--- a/Water Drink Water/src/clients/blazor.wa.tbd/blazor.wa.tbd.csproj
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/blazor.wa.tbd.csproj
@@ -12,6 +12,9 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all"/>
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+        <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.5.0" />
+        <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.5.0" />
+        <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.5.0" />
     </ItemGroup>
 
     <ItemGroup>
